--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,6 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        an/>
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
