--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,12 +10,13 @@
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:scrollbarAlwaysDrawHorizontalTrack="false">
 
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content"    
             android:orientation="horizontal" />
     </HorizontalScrollView>
 
